--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+	.heading {
+		font-size: theme("fontSize.4xl");
+		font-weight: theme("fontWeight.bold");
+	}
+}
+@import url("https://rsms.me/inter/inter.css");
+* {
+	font-family: "Inter", sans-serif;
+}
+@supports (font-variation-settings: normal) {
+	* {
+		font-family: "Inter var", sans-serif;
+	}
+}
